--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
 
 .inputBox {
   height: 48px;
-  width: 400px;
+  min-width: 400px;
   font-size: 18px;
   border-radius: 4px;
   border: 1px solid #9ca3af;
